added print for depth